Добавлены автотесты